--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,23 @@
     <string name="tv_version_num">Version: %1$s</string>
     <string name="tv_objective_version">Version: %1$s, Objective Collection</string>
     <string name="tv_subjective_version">Version: %1$s, Subjective Collection</string>
+    <string name="climber_strap_installation_difficulty">Climber Strap Installation Difficulty</string>
+    <string name="filler_team">FILLER_TEAM</string>
+    <string name="back_to_collection">Back to Collection</string>
+    <string name="radio_btn_one">1</string>
+    <string name="radio_btn_two">2</string>
+    <string name="radio_btn_three">3</string>
+    <string name="radio_btn_four">4</string>
+    <string name="radio_btn_five">5</string>
+    <string name="radio_btn_six">6</string>
+    <string name="radio_btn_seven">7</string>
+    <string name="radio_btn_eight">8</string>
+    <string name="radio_btn_nine">9</string>
+    <string name="radio_btn_ten">10</string>
+    <string name="save">Save</string>
+    <string name="cam_delete">Delete</string>
+    <string name="cam_continue">Continue</string>
+    <string name="climber_installation_notes">Climber installation notes</string>
 
     <string-array name="drivetrain_array">
         <item>Drivetrain</item>
