Design Objective UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,20 @@
     <string name="motor_number"># of Motors</string>
     <string name="ground_intake">Can Ground Intake</string>
     <string name="no_ground_intake">Can NOT Ground Intake</string>
-    <string name="cross_trench">Can Cross Trench</string>
-    <string name="no_cross_trench">Can NOT Cross Trench</string>
+    <string name="can_climb">Can Climb</string>
+    <string name="cannot_climb">Can NOT Climb</string>
+    <string name="has_vision">Has Vision</string>
+    <string name="no_vision">Does NOT Have Vision</string>
+    <string name="can_intake_terminal">Can Intake From Terminal</string>
+    <string name="cannot_intake_terminal">Can NOT Intake From Terminal</string>
+    <string name="can_eject_terminal">Can Eject Into Terminal</string>
+    <string name="cannot_eject_terminal">Can NOT Eject Into Terminal</string>
+    <string name="can_move_under_rung">Can Move Under Low Rung</string>
+    <string name="cannot_move_under_rung">Can Move Under Low Rung</string>
+    <string name="can_cheesecake">Can Cheesecake</string>
+    <string name="cannot_cheesecake">Can NOT Cheesecake</string>
+    <string name="flag_cheesecake">Flag Cheesecake</string>
+    <string name="flagged_cheesecake">Cheesecake Flagged</string>
     <string name="team_number">1678</string>
     <string name="btn_save">Save Button</string>
     <string name="error_back_reset">Do you want to reset the collection mode?</string>
