--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,8 @@
     <string name="error_back_reset">Do you want to reset the collection mode?</string>
     <string name="error_back">Please long press to reset the collection mode</string>
     <string name="tv_version_num">Version: %1$s</string>
-    <string name="tv_objective_version">Version: %1$s, Objective Collection</string>
-    <string name="tv_subjective_version">Version: %1$s, Subjective Collection</string>
+    <string name="tv_objective_version">Version: %1$s, Objective</string>
+    <string name="tv_subjective_version">Version: %1$s, Subjective</string>
     <string name="climber_strap_installation_difficulty">Climber Strap Installation Difficulty</string>
     <string name="filler_team">FILLER_TEAM</string>
     <string name="back_to_collection">Back to Collection</string>
@@ -50,6 +50,7 @@
     <string name="picture_type_six">Shooter</string>
     <string name="picture_type_seven">Climber</string>
     <string name="yay_kate_keep_up_the_great_work_3">Yay Kate! Keep up the great work \n ଘ(੭*ˊᵕˋ)੭* ੈ♡‧₊˚</string>
+    <string name="export_flags">Export Flags</string>
 
     <string-array name="drivetrain_array">
         <item>Drivetrain</item>
