--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     </string-array>
 
     <string-array name="picture_types">
-        <item>Full Robot</item>
+        <item>Full Robot 1</item>
         <item>Full Robot 2</item>
         <item>Drivetrain</item>
         <item>Intake</item>
