--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,15 @@
     <string name="collection_subjective">Subjective Pit Collection (SEALs)</string>
     <string name="FILLER_TEAM">Team Number</string>
     <string name="motor_number"># of Motors</string>
-    <string name="ground_intake">Can Ground Intake</string>
-    <string name="no_ground_intake">Can NOT Ground Intake</string>
-    <string name="can_climb">Can Climb</string>
-    <string name="cannot_climb">Can NOT Climb</string>
+    <string name="weight">Weight</string>
+    <string name="length">Length</string>
+    <string name="width">Width</string>
+    <string name="has_communication">HAS Communication Device</string>
+    <string name="no_communication">NO Communication Device</string>
     <string name="has_vision">Has Vision</string>
     <string name="no_vision">Does NOT Have Vision</string>
-    <string name="can_move_under_rung">Can Move Under Low Rung</string>
-    <string name="cannot_move_under_rung">Can NOT Move Under Low Rung</string>
+    <string name="spin_drivetrain">Drivetrain Type</string>
+    <string name="spin_drivetrain_motor_type">Drivetrain Motor Type</string>
     <string name="team_number">1678</string>
     <string name="btn_save">Save Button</string>
     <string name="error_back_reset">Do you want to reset the collection mode?</string>
