--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="collection_subjective">Subjective Pit Collection (SEALs)</string>
     <string name="FILLER_TEAM">Team Number</string>
     <string name="motor_number"># of Motors</string>
-    <string name="weight">Weight</string>
-    <string name="length">Length</string>
-    <string name="width">Width</string>
+    <string name="weight">Weight (lbs.)</string>
+    <string name="length">Length (in.)</string>
+    <string name="width">Width (in.)</string>
     <string name="has_communication">HAS Communication Device</string>
     <string name="no_communication">NO Communication Device</string>
     <string name="has_vision">Has Vision</string>
