--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="btn_save">Save Button</string>
     <string name="error_back_reset">Do you want to reset the collection mode?</string>
     <string name="error_back">Please long press to reset the collection mode</string>
-    <string name="tv_version_num">Version: %1$s</string>
+    <string name ="event_key">%1$s</string>
+    <string name="version_num">Version: %1$s</string>
     <string name="tv_objective_version">Version: %1$s, Objective</string>
     <string name="tv_subjective_version">Version: %1$s, Subjective</string>
     <string name="climber_strap_installation_difficulty">Climber Strap Installation Difficulty</string>
